8179602: Backout fix for JDK-8165437 due to breakage on 32-bit Linux

Reviewed-by: chegar