jdk/src/java.base/macosx/native/libnet/bsd_close.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -39,8 +39,6 @@
 #include <unistd.h>
 #include <errno.h>
 #include <sys/poll.h>
-#include "jvm.h"
-#include "net_util.h"
 
 /*
  * Stack allocated by thread when doing blocking operation
@@ -416,7 +414,8 @@ int NET_Poll(struct pollfd *ufds, unsigned int nfds, int timeout) {
  * Auto restarts with adjusted timeout if interrupted by
  * signal other than our wakeup signal.
  */
-int NET_Timeout(JNIEnv *env, int s, long timeout, long nanoTimeStamp) {
+int NET_Timeout0(int s, long timeout, long currentTime) {
+    long prevtime = currentTime, newtime;
     struct timeval t, *tp = &t;
     fd_set fds;
     fd_set* fdsp = NULL;
@@ -461,8 +460,6 @@ int NET_Timeout(JNIEnv *env, int s, long timeout, long nanoTimeStamp) {
     }
     FD_SET(s, fdsp);
 
-    long prevNanoTime = nanoTimeStamp;
-    long nanoTimeout = timeout * NET_NSEC_PER_MSEC;
     for(;;) {
         int rv;
 
@@ -480,21 +477,25 @@ int NET_Timeout(JNIEnv *env, int s, long timeout, long nanoTimeStamp) {
          * has expired return 0 (indicating timeout expired).
          */
         if (rv < 0 && errno == EINTR) {
-            long newNanoTime = JVM_NanoTime(env, 0);
-            nanoTimeout -= newNanoTime - prevNanoTime;
-            if (nanoTimeout < NET_NSEC_PER_MSEC) {
-                if (allocated != 0)
-                    free(fdsp);
-                return 0;
+            if (timeout > 0) {
+                struct timeval now;
+                gettimeofday(&now, NULL);
+                newtime = now.tv_sec * 1000  +  now.tv_usec / 1000;
+                timeout -= newtime - prevtime;
+                if (timeout <= 0) {
+                    if (allocated != 0)
+                        free(fdsp);
+                    return 0;
+                }
+                prevtime = newtime;
+                t.tv_sec = timeout / 1000;
+                t.tv_usec = (timeout % 1000) * 1000;
             }
-            prevNanoTime = newNanoTime;
-            t.tv_sec = nanoTimeout / NET_NSEC_PER_SEC;
-            t.tv_usec = (nanoTimeout % NET_NSEC_PER_SEC) / NET_NSEC_PER_USEC;
-
         } else {
             if (allocated != 0)
                 free(fdsp);
             return rv;
         }
+
     }
 }
