jdk/src/java.base/unix/native/libnet/PlainSocketImpl.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,6 @@
  */
 #include <errno.h>
 
-#include "jvm.h"
 #include "net_util.h"
 
 #include "java_net_SocketOptions.h"
@@ -232,6 +231,7 @@ Java_java_net_PlainSocketImpl_socketConnect(JNIEnv *env, jobject this,
 {
     jint localport = (*env)->GetIntField(env, this, psi_localportID);
     int len = 0;
+
     /* fdObj is the FileDescriptor field on this */
     jobject fdObj = (*env)->GetObjectField(env, this, psi_fdID);
 
@@ -325,8 +325,8 @@ Java_java_net_PlainSocketImpl_socketConnect(JNIEnv *env, jobject this,
         /* connection not established immediately */
         if (connect_rv != 0) {
             socklen_t optlen;
-            jlong nanoTimeout = timeout * NET_NSEC_PER_MSEC;
-            jlong prevNanoTime = JVM_NanoTime(env, 0);
+            jlong prevTime = JVM_CurrentTimeMillis(env, 0);
+
             if (errno != EINPROGRESS) {
                 NET_ThrowByNameWithLastError(env, JNU_JAVANETPKG "ConnectException",
                              "connect failed");
@@ -341,13 +341,13 @@ Java_java_net_PlainSocketImpl_socketConnect(JNIEnv *env, jobject this,
              * this thread.
              */
             while (1) {
-                jlong newNanoTime;
+                jlong newTime;
                 struct pollfd pfd;
                 pfd.fd = fd;
                 pfd.events = POLLOUT;
 
                 errno = 0;
-                connect_rv = NET_Poll(&pfd, 1, nanoTimeout / NET_NSEC_PER_MSEC);
+                connect_rv = NET_Poll(&pfd, 1, timeout);
 
                 if (connect_rv >= 0) {
                     break;
@@ -360,13 +360,13 @@ Java_java_net_PlainSocketImpl_socketConnect(JNIEnv *env, jobject this,
                  * The poll was interrupted so adjust timeout and
                  * restart
                  */
-                newNanoTime = JVM_NanoTime(env, 0);
-                nanoTimeout -= (newNanoTime - prevNanoTime);
-                if (nanoTimeout < NET_NSEC_PER_MSEC) {
+                newTime = JVM_CurrentTimeMillis(env, 0);
+                timeout -= (newTime - prevTime);
+                if (timeout <= 0) {
                     connect_rv = 0;
                     break;
                 }
-                prevNanoTime = newNanoTime;
+                prevTime = newTime;
 
             } /* while */
 
@@ -593,7 +593,7 @@ Java_java_net_PlainSocketImpl_socketAccept(JNIEnv *env, jobject this,
     /* fields on this */
     int port;
     jint timeout = (*env)->GetIntField(env, this, psi_timeoutID);
-    jlong prevNanoTime = 0, nanoTimeout = timeout * NET_NSEC_PER_MSEC;
+    jlong prevTime = 0;
     jobject fdObj = (*env)->GetObjectField(env, this, psi_fdID);
 
     /* the FileDescriptor field on socket */
@@ -633,18 +633,18 @@ Java_java_net_PlainSocketImpl_socketAccept(JNIEnv *env, jobject this,
      */
     for (;;) {
         int ret;
-        jlong currNanoTime;
+
         /* first usage pick up current time */
-        if (prevNanoTime == 0 && nanoTimeout > 0) {
-            prevNanoTime = JVM_NanoTime(env, 0);
+        if (prevTime == 0 && timeout > 0) {
+            prevTime = JVM_CurrentTimeMillis(env, 0);
         }
 
         /* passing a timeout of 0 to poll will return immediately,
            but in the case of ServerSocket 0 means infinite. */
         if (timeout <= 0) {
-            ret = NET_Timeout(env, fd, -1, 0);
+            ret = NET_Timeout(fd, -1);
         } else {
-            ret = NET_Timeout(env, fd, nanoTimeout / NET_NSEC_PER_MSEC, prevNanoTime);
+            ret = NET_Timeout(fd, timeout);
         }
         if (ret == 0) {
             JNU_ThrowByName(env, JNU_JAVANETPKG "SocketTimeoutException",
@@ -676,14 +676,17 @@ Java_java_net_PlainSocketImpl_socketAccept(JNIEnv *env, jobject this,
         }
 
         /* ECONNABORTED or EWOULDBLOCK error so adjust timeout if there is one. */
-        currNanoTime = JVM_NanoTime(env, 0);
-        nanoTimeout -= (currNanoTime - prevNanoTime);
-        if (nanoTimeout < NET_NSEC_PER_MSEC) {
-            JNU_ThrowByName(env, JNU_JAVANETPKG "SocketTimeoutException",
-                    "Accept timed out");
-            return;
+        if (timeout) {
+            jlong currTime = JVM_CurrentTimeMillis(env, 0);
+            timeout -= (currTime - prevTime);
+
+            if (timeout <= 0) {
+                JNU_ThrowByName(env, JNU_JAVANETPKG "SocketTimeoutException",
+                                "Accept timed out");
+                return;
+            }
+            prevTime = currTime;
         }
-        prevNanoTime = currNanoTime;
     }
 
     if (newfd < 0) {
